[project]
name = "minidspvol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "hid==1.0.7",
    "keyboard>=0.13.5",
    "pandas>=2.2.3",
    "pynput>=1.8.1",
    "pyside6>=6.6",
    "pywin32>=306",
    "qdarkstyle>=3.2.3",
    "wxpython>=4.2.3",
]
